--- a/nanak8s/webapp.yaml
+++ b/nanak8s/webapp.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: webappcontainer
-          image: nanajanashia/k8s-demo-app:v1.0
+          image: nginx-so2-test
           ports:
             - containerPort: 3000
           env:
