--- a/docker_registry_test/Dockerfile
+++ b/docker_registry_test/Dockerfile
@@ -1,6 +1,7 @@
 #FROM localhost:30000/collectorv3/collector
 FROM python
-ENV SO2_DIR /var/lib/ebrandvalue
+RUN mkdir "/var/lib/so2"
+ENV SO2_DIR /var/lib/so2
 ENV SCRIPT_DIR $SO2_DIR/test/docker_registry_test
 WORKDIR $SCRIPT_DIR
 ENV PYTHONPATH $SCRIPT_DIR
