--- a/harbor/harbor.yml
+++ b/harbor/harbor.yml
@@ -10,9 +10,9 @@ http:
   port: 80
 
 # https related config
-#https:
+https:
   # https port for harbor, default is 443
-#  port: 443
+  port: 443
   # The path of cert and key files for nginx
 #  certificate: /your/certificate/path
 #  private_key: /your/private/key/path
