--- a/docker_registry_test/registry_test.yaml
+++ b/docker_registry_test/registry_test.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: registry-test-container
-          image: so2harbor.com/library/docker_registry_test:latest
+          image: so2harbor.com:6000/library/docker_registry_test:latest
       imagePullSecrets:
         - name: regcred
 
