--- a/harbor/harbor.yml
+++ b/harbor/harbor.yml
@@ -7,15 +7,17 @@ hostname: so2harbor.com
 # http related config
 http:
   # port for http, default is 80. If https enabled, this port will redirect to https port
-  port: 80
+  port: 6080
 
 # https related config
 https:
   # https port for harbor, default is 443
-  port: 443
+  port: 6000
   # The path of cert and key files for nginx
-#  certificate: /your/certificate/path
-#  private_key: /your/private/key/path
+  certificate: /data/cert/so2harbor.com.crt
+  private_key: /data/cert/so2harbor.com.key
+
+
 
 # # Uncomment following will enable tls communication between all harbor components
 # internal_tls:
