--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /.idea/.gitignore
 /pulumi/.gitignore
-/webapp_test/.gitignore
+/svelte_kit_test/.gitignore
 /terraform/.terraform.lock.hcl
 /.idea/highlightedFiles.xml
 /.idea/home_kubernetes.iml
