--- a/postgres/postgres.yaml
+++ b/postgres/postgres.yaml
@@ -48,9 +48,9 @@ apiVersion: v1
 kind: Service
 
 metadata:
-  name: postgres
+  name: postgres-service
   labels:
-    app: postgres
+    app: postgres-service
 spec:
   type: NodePort
   selector:
