--- a/svelte_test/webapp_test.yaml
+++ b/svelte_test/webapp_test.yaml
@@ -34,6 +34,20 @@ spec:
     app: webapp
   ports:
     - protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 8080
-      nodePort: 30201
+      nodePort: 30200
+#---
+#apiVersion: v1
+#kind: Service
+#metadata:
+#  name: webapp-service
+#spec:
+#  type: LoadBalancer
+#  selector:
+#    app: webapp
+#  ports:
+#    - protocol: TCP
+#      port: 8080
+#      targetPort: 8080
+#  clusterIP: 10.99.163.231
