--- a/persistent/persex_mix.yaml
+++ b/persistent/persex_mix.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: local
   capacity:
-    storage: 10Gi
+    storage: 20Gi
   accessModes:
     - ReadWriteMany
   hostPath:
@@ -18,6 +18,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: postgres-claim
 spec:
+  volumeName: test-volume
   storageClassName: local
   accessModes:
     - ReadWriteMany
