--- a/nginx-ingress/so2-conf.yaml
+++ b/nginx-ingress/so2-conf.yaml
@@ -7,6 +7,26 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
+    - host: so2homelab.com
+      http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: portfolio-service
+                port:
+                  number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-api
+#  annotations:
+#    kubernetes.io/ingress.class: ingress-nginx
+spec:
+  ingressClassName: nginx
+  rules:
     - host: band.so2homelab.com
       http:
         paths:
