--- a/portfolio/portfolio.yaml
+++ b/portfolio/portfolio.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webapp-deployment
+  name: portfolio-deployment
   labels:
-    app: webapp
+    app: portfolio
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: webapp
+      app: portfolio
   template:
     metadata:
       labels:
-        app: webapp
+        app: portfolio
     spec:
       containers:
-        - name: webappcontainer
+        - name: portfoliocontainer
           image: so2harbor.com:6000/library/svelte_app:latest
           ports:
             - containerPort: 8080
@@ -27,25 +27,25 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: webapp-service
+  name: portfolio-service
 spec:
   type: NodePort
   selector:
-    app: webapp
+    app: portfolio
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
-      nodePort: 30200
+      nodePort: 30300
 #---
 #apiVersion: v1
 #kind: Service
 #metadata:
-#  name: webapp-service
+#  name: portfolio-service
 #spec:
 #  type: LoadBalancer
 #  selector:
-#    app: webapp
+#    app: portfolio
 #  ports:
 #    - protocol: TCP
 #      port: 8080
