--- a/svelte_test/webapp_test.yaml
+++ b/svelte_test/webapp_test.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: webappcontainer
-          image: so2harbor.com:6000/library/svelte_app:latest
+          image: localhost:6080/library/svelte_app:latest
           ports:
             - containerPort: 8080
       imagePullSecrets:
