--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,28 @@
 /terraform/terraform.tfstate
 /terraform/.terraform/providers/registry.terraform.io/hashicorp/kubernetes/2.16.1/linux_amd64/terraform-provider-kubernetes_v2.16.1_x5
 /.idea/vcs.xml
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
